Add support for local mode recording downloads
git-svn-id: svn://internal-repo/nsc/NHome/homeserver@137280 bc4cc02b-413e-4181-b44e-24092dc36e11

--- a/local/directive/devices/cam-rec.html
+++ b/local/directive/devices/cam-rec.html
@@ -6,6 +6,9 @@
     <h5>{{::camrecCtrl.deviceObj.starttime | date: 'd/MMM/yyyy HH:mm:ss'}}</h5>
   </span>
   <span class="cam-rec-actions">
+    <a href="/{{::camrecCtrl.deviceObj.id}}.webm" download title="{{::(camrecCtrl.deviceObj.size / 1048576).toFixed(2)}} MB">
+      <i class="material-icons">file_download</i>
+    </a>
     <i class="material-icons color-red" ng-click="camrecCtrl.deleteRecording(camrecCtrl.deviceObj.id)">delete</i>
   </span>
 </div>
