--- a/nwjs/index.html
+++ b/nwjs/index.html
@@ -148,7 +148,7 @@
     </div>
   </div>
 
-  <script src="../local/js/libraries/jquery-1.11.3.min.js"></script>
+  <script src="../local/js/lib/jquery-1.11.3.min.js"></script>
   <script src="js/main.js"></script>
 </body>
 
