--- a/local/html/settings/server_template.html
+++ b/local/html/settings/server_template.html
@@ -99,7 +99,7 @@
       <div class="settings-box-nav settings-box-btn-wrap">
         <button type="button" class="settings-btn" data-toggle="collapse" data-target="#backup">Backup</button>
         <span>
-          <input type="file" id="restore-server" accept="application/json" onchange="angular.element(this).scope().restore(this)">
+          <input type="file" id="restore-server" accept="application/json">
           <label for="restore-server" class="settings-btn green">
             Restore
           </label>
