Add welcome page, streaming improvements, child+respawn on windows
git-svn-id: svn://internal-repo/nsc/NHome/homeserver@138833 bc4cc02b-413e-4181-b44e-24092dc36e11

--- a/local/html/directive/devices/cam-rec.html
+++ b/local/html/directive/devices/cam-rec.html
@@ -1,14 +1,22 @@
 <div class="cam-rec-wrap">
-  <img ng-src="{{::camrecCtrl.deviceObj.thumbnailImg}}" />
-  <i class="material-icons cam-rec-play" ng-click="camrecCtrl.requestPlayback(camrecCtrl.deviceObj)">play_circle_outline</i>
+  <video width="100%" height="100%" controls></video>
   <span class="cam-rec-info">
     <h5>{{::camrecCtrl.deviceObj.cameraName}}</h5>
     <h5>{{::camrecCtrl.deviceObj.starttime | date: 'd/MMM/yyyy HH:mm:ss'}}</h5>
   </span>
-  <span class="cam-rec-actions">
-    <a href="/{{::camrecCtrl.deviceObj.id}}.webm" download title="{{::(camrecCtrl.deviceObj.size / 1048576).toFixed(2)}} MB">
-      <i class="material-icons">file_download</i>
-    </a>
-    <i class="material-icons color-red" ng-click="camrecCtrl.deleteRecording(camrecCtrl.deviceObj.id)">delete</i>
+  <span class="dropdown camera-dropdown-wrap cam-rec">
+    <i class="material-icons dropdown-toggle" data-toggle="dropdown">more_vert</i>
+    <ul class="dropdown-menu">
+
+      <li title="download recording">
+        <a href="/{{::camrecCtrl.deviceObj.id}}.webm" download title="{{::(camrecCtrl.deviceObj.size / 1048576).toFixed(2)}} MB">
+          <i class="material-icons">file_download</i>
+        </a>
+      </li>
+
+      <li title="delete recording" ng-click="camrecCtrl.deleteRecording(camrecCtrl.deviceObj.id)">
+        <i class="material-icons color-red">delete</i>
+      </li>
+    </ul>
   </span>
 </div>
