--- a/nwjs/index.html
+++ b/nwjs/index.html
@@ -3,140 +3,11 @@
 
 <head>
   <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="mobile-web-app-capable" content="yes">
   <title>NHome server</title>
-
-  <link rel="stylesheet" href="css/server.css" media="screen" title="no title" charset="utf-8">
 </head>
 
-<body>
-
-  <div class="main-wrap">
-    <div class="sidebar-wrap">
-      <img src="img/nhome_logo_white.png" alt="nHome logo" />
-
-      <button type="button" name="status" class="nhbtn sidebar-btn active" value="settings" id="settings-btn">
-        <h3>Status and settings</h3>
-        <p class="color-gray">
-          See server status and edit its properties
-        </p>
-      </button>
-
-      <button type="button" name="terminal" class="nhbtn sidebar-btn" value="terminal" id="terminal-btn">
-        <h3>Terminal</h3>
-        <p class="color-gray">
-          View server log and stay informed
-        </p>
-      </button>
-
-    </div>
-
-    <div class="content-wrap">
-      <div id="settings" class="active tab">
-        <h1>Status</h1>
-        <hr>
-        <div class="content-holder">
-          <div class="content">
-
-            <div>
-              <h4>
-              Connection
-            </h4>
-              <h2 class="color-blue" id="connected">
-              -
-            </h2>
-            </div>
-
-            <div>
-              <h4>
-              Version
-            </h4>
-              <h2 class="color-blue" id="app_version">
-              -
-            </h2>
-            </div>
-
-          </div>
-
-          <div class="content">
-            <div>
-              <h4>
-              Ping
-            </h4>
-              <h2 class="color-blue" id="ping">
-              -
-            </h2>
-            </div>
-
-            <div>
-              <h4>
-              OS
-            </h4>
-              <h2 class="color-blue" id="node_platform">
-              -
-            </h2>
-            </div>
-
-            <div>
-              <h4>
-              Node Version
-            </h4>
-              <h2 class="color-blue" id="node_version">
-              -
-            </h2>
-            </div>
-
-            <div>
-              <h4>
-              IP
-            </h4>
-              <h2 class="color-blue" id="local_ip">
-              -
-            </h2>
-            </div>
-
-            <div>
-              <h4>
-              External IP
-            </h4>
-              <h2 class="color-blue" id="external_ip">
-              -
-            </h2>
-            </div>
-          </div>
-
-          <div class="content">
-            <div>
-              <h4>
-              Bridges
-            </h4>
-              <h2 class="color-blue" id="bridge_count">
-              -
-            </h2>
-            </div>
-
-            <div>
-              <h4>
-              Devices
-            </h4>
-              <h2 class="color-blue" id="device_count">
-              -
-            </h2>
-            </div>
-          </div>
-        </div>
-
-      </div>
-
-      <div id="terminal" class="tab">
-        <pre id="console"></pre>
-      </div>
-    </div>
-  </div>
-
-  <script src="../local/js/lib/jquery-1.11.3.min.js"></script>
+<body style="margin: 0">
+  <iframe id="mainframe" style="display: block; border: none; height:100vh; width: 100vw" src="../local/welcome/index.html"></iframe>
   <script src="js/main.js"></script>
 </body>
 
