--- a/local/index.html
+++ b/local/index.html
@@ -1,118 +1,122 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="mobile-web-app-capable" content="yes">
-  <title>NHome</title>
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="mobile-web-app-capable" content="yes">
+    <title>NHome</title>
 
-  <!-- manifest file !-->
-  <link rel="manifest" href="manifest.json">
+    <!-- manifest file !-->
+    <link rel="manifest" href="manifest.json">
 
-  <!-- icons !-->
-  <link rel="icon" sizes="96x96" href="img/logo/mobile/nhome-icon-xl.png">
-  <link rel="icon" sizes="72x72" href="img/logo/mobile/nhome-icon-l.png">
-  <link rel="icon" sizes="48x48" href="img/logo/mobile/nhome-icon-s.png">
-  <!-- favicon -->
-  <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
-  <link rel="icon" href="img/favicon.ico" type="image/x-icon">
-  <!-- Bootstrap -->
-  <link href="css/bootstrap/glyphicons-halflings-regular.svg">
-  <!-- build:css css/style.min.css -->
-  <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
-  <!-- Bootstrap color picker !-->
-  <link rel="stylesheet" type="text/css" href="css/bootstrap.colorpickersliders.css">
+    <!-- icons !-->
+    <link rel="icon" sizes="96x96" href="img/logo/mobile/nhome-icon-xl.png">
+    <link rel="icon" sizes="72x72" href="img/logo/mobile/nhome-icon-l.png">
+    <link rel="icon" sizes="48x48" href="img/logo/mobile/nhome-icon-s.png">
+    <!-- favicon -->
+    <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="img/favicon.ico" type="image/x-icon">
+    <!-- Bootstrap -->
+    <link href="css/bootstrap/glyphicons-halflings-regular.svg">
+    <!-- build:css css/style.min.css -->
+    <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
+    <!-- Bootstrap color picker !-->
+    <link rel="stylesheet" type="text/css" href="css/bootstrap.colorpickersliders.css">
 
-  <link rel="stylesheet" type="text/css" href="css/style.css">
-  <link rel="stylesheet" type="text/css" href="css/logIn.css">
-  <link rel="stylesheet" type="text/css" href="css/frame.css">
-  <link rel="stylesheet" type="text/css" href="css/add-server.css">
-  <link rel="stylesheet" type="text/css" href="css/scenes.css">
-  <link rel="stylesheet" type="text/css" href="css/security.css">
-  <link rel="stylesheet" type="text/css" href="css/schedule.css">
-  <link rel="stylesheet" type="text/css" href="css/devices.css">
-  <link rel="stylesheet" type="text/css" href="css/settings.css">
-  <link rel="stylesheet" type="text/css" href="css/scene-schedule-devices.css">
-  <link rel="stylesheet" type="text/css" href="css/roundslider.min.css">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="css/logIn.css">
+    <link rel="stylesheet" type="text/css" href="css/frame.css">
+    <link rel="stylesheet" type="text/css" href="css/add-server.css">
+    <link rel="stylesheet" type="text/css" href="css/scenes.css">
+    <link rel="stylesheet" type="text/css" href="css/security.css">
+    <link rel="stylesheet" type="text/css" href="css/schedule.css">
+    <link rel="stylesheet" type="text/css" href="css/devices.css">
+    <link rel="stylesheet" type="text/css" href="css/settings.css">
+    <link rel="stylesheet" type="text/css" href="css/scene-schedule-devices.css">
+    <link rel="stylesheet" type="text/css" href="css/roundslider.min.css">
 
-  <!-- devices css !-->
-  <link rel="stylesheet" type="text/css" href="css/devices/device.css">
-  <link rel="stylesheet" type="text/css" href="css/devices/remotes.css">
-  <link rel="stylesheet" type="text/css" href="css/devices/sensor.css">
-  <link rel="stylesheet" type="text/css" href="css/devices/alarm.css">
-  <!-- endbuild -->
-</head>
+    <!-- devices css !-->
+    <link rel="stylesheet" type="text/css" href="css/devices/device.css">
+    <link rel="stylesheet" type="text/css" href="css/devices/remotes.css">
+    <link rel="stylesheet" type="text/css" href="css/devices/sensor.css">
+    <link rel="stylesheet" type="text/css" href="css/devices/alarm.css">
+    <!-- endbuild -->
+  </head>
 
-<body ng-app="nHome" ng-cloak>
+  <body ng-app="nHome" ng-cloak>
 
-  <ui-view></ui-view>
-  <!-- build:js js/main.min.js -->
-  <!-- angularJS -->
-  <script src="js/lib/angular.min.js"></script>
-  <!-- ui-router -->
-  <script src="js/lib/angular-ui-router.min.js"></script>
-  <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-  <script src="js/lib/jquery-1.11.3.min.js"></script>
-  <!-- Bootstrap -->
-  <script src="js/bootstrap.min.js"></script>
-  <!-- socket.IO -->
-  <script src="js/lib/socket.io.js"></script>
-  <!-- color picker !-->
-  <script defer src="js/tinycolor-min.js"></script>
-  <script defer src="js/bootstrap.colorpickersliders.min.js"></script>
-  <!-- ng module, ui router logic -->
-  <script defer src="js/app.js"></script>
-  <script defer src="js/services.js"></script>
+    <ui-view></ui-view>
+    <!-- build:js js/main.min.js -->
+    <!-- angularJS -->
+    <script src="js/lib/angular.min.js"></script>
+    <!-- ui-router -->
+    <script src="js/lib/angular-ui-router.min.js"></script>
+    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+    <script src="js/lib/jquery-1.11.3.min.js"></script>
+    <!-- Bootstrap -->
+    <script src="js/bootstrap.min.js"></script>
+    <!-- socket.IO -->
+    <script src="js/lib/socket.io.js"></script>
+    <!-- color picker !-->
+    <script defer src="js/tinycolor-min.js"></script>
+    <script defer src="js/bootstrap.colorpickersliders.min.js"></script>
+    <!-- ng module, ui router logic -->
+    <script defer src="js/app.js"></script>
+    <script defer src="js/services.js"></script>
 
-  <!-- HTTPS request/ socektIO setup -->
-  <script defer src="js/factory/socket.js"></script>
+    <!-- HTTPS request/ socektIO setup -->
+    <script defer src="js/factory/dataRequest.js"></script>
+    <script defer src="js/factory/socket.js"></script>
 
-  <!-- services shared among controlelrs and directives !-->
-  <script defer src="js/service/dataService.js"></script>
+    <!-- services shared among controlelrs and directives !-->
+    <script defer src="js/service/dataService.js"></script>
 
-  <!-- controller !-->
-  <script defer src="js/controller/NHomeCtrl.js"></script>
-  <script defer src="js/controller/AllRoomCtrl.js"></script>
-  <script defer src="js/controller/DashboardCtrl.js"></script>
-  <script defer src="js/controller/MostUsedCtrl.js"></script>
-  <script defer src="js/controller/RecentlyUsedCtrl.js"></script>
-  <script defer src="js/controller/DeviceCtrl.js"></script>
-  <script defer src="js/controller/ScenesCtrl.js"></script>
-  <script defer src="js/controller/ScheduleCtrl.js"></script>
-  <script defer src="js/controller/SecurityCtrl.js"></script>
-  <script defer src="js/controller/SettingsServerCtrl.js"></script>
+    <!-- controller !-->
+    <script defer src="js/controller/LoginCtrl.js"></script>
+    <script defer src="js/controller/RegisterCtrl.js"></script>
+    <script defer src="js/controller/ForgotPassCtrl.js"></script>
+    <script defer src="js/controller/NHomeCtrl.js"></script>
+    <script defer src="js/controller/AllRoomCtrl.js"></script>
+    <script defer src="js/controller/DashboardCtrl.js"></script>
+    <script defer src="js/controller/MostUsedCtrl.js"></script>
+    <script defer src="js/controller/RecentlyUsedCtrl.js"></script>
+    <script defer src="js/controller/DeviceCtrl.js"></script>
+    <script defer src="js/controller/ScenesCtrl.js"></script>
+    <script defer src="js/controller/ScheduleCtrl.js"></script>
+    <script defer src="js/controller/SecurityCtrl.js"></script>
+    <script defer src="js/controller/SettingsServerCtrl.js"></script>
 
-  <!-- live stream, play recordings -->
-  <script defer src="js/directive/play-stream.js"></script>
-  <script defer src="js/directive/add-remote.js"></script>
-  <script defer src="js/directive/add-camera.js"></script>
-  <script defer src="js/directive/edit-device.js"></script>
-  <script defer src="js/directive/add-scene.js"></script>
-  <script defer src="js/directive/googleMaps.js"></script>
-  <!-- single devices !-->
-  <script defer src="js/directive/devices/light.js"></script>
-  <script defer src="js/directive/devices/switch.js"></script>
-  <script defer src="js/directive/devices/remote.js"></script>
-  <script defer src="js/directive/devices/scene.js"></script>
-  <script defer src="js/directive/devices/thermostat.js"></script>
-  <script defer src="js/directive/devices/shutter.js"></script>
-  <script defer src="js/directive/devices/schedule.js"></script>
-  <script defer src="js/directive/devices/alarm.js"></script>
-  <script defer src="js/directive/devices/camera.js"></script>
-  <script defer src="js/directive/devices/sensor.js"></script>
-  <script defer src="js/directive/devices/devices-dev.js"></script>
-  <script defer src="js/directive/devices/cam-rec.js"></script>
-  <!-- Scene and Schedule devices !-->
-  <script defer src="js/directive/devices/scene-schedule/scene-switch.js"></script>
-  <script defer src="js/directive/devices/scene-schedule/scene-light.js"></script>
-  <script defer src="js/directive/devices/scene-schedule/scene-thermostat.js"></script>
-  <script defer src="js/directive/devices/scene-schedule/scene-shutter.js"></script>
-  <script defer src="js/directive/devices/scene-schedule/scene-TvRemote.js"></script>
-  <!-- endbuild -->
-  <!-- Google Maps -->
-  <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDADXlpX2alBz67rIO3mNGK_0tmghDrRLs&libraries=places"></script>
-</body>
+    <!-- live stream, play recordings -->
+    <script defer src="js/directive/play-stream.js"></script>
+    <script defer src="js/directive/add-remote.js"></script>
+    <script defer src="js/directive/add-camera.js"></script>
+    <script defer src="js/directive/edit-device.js"></script>
+    <script defer src="js/directive/add-scene.js"></script>
+    <script defer src="js/directive/googleMaps.js"></script>
+    <!-- single devices !-->
+    <script defer src="js/directive/devices/light.js"></script>
+    <script defer src="js/directive/devices/switch.js"></script>
+    <script defer src="js/directive/devices/remote.js"></script>
+    <script defer src="js/directive/devices/scene.js"></script>
+    <script defer src="js/directive/devices/thermostat.js"></script>
+    <script defer src="js/directive/devices/shutter.js"></script>
+    <script defer src="js/directive/devices/schedule.js"></script>
+    <script defer src="js/directive/devices/alarm.js"></script>
+    <script defer src="js/directive/devices/camera.js"></script>
+    <script defer src="js/directive/devices/sensor.js"></script>
+    <script defer src="js/directive/devices/devices-dev.js"></script>
+    <script defer src="js/directive/devices/cam-rec.js"></script>
+    <!-- Scene and Schedule devices !-->
+    <script defer src="js/directive/devices/scene-schedule/scene-switch.js"></script>
+    <script defer src="js/directive/devices/scene-schedule/scene-light.js"></script>
+    <script defer src="js/directive/devices/scene-schedule/scene-thermostat.js"></script>
+    <script defer src="js/directive/devices/scene-schedule/scene-shutter.js"></script>
+    <script defer src="js/directive/devices/scene-schedule/scene-TvRemote.js"></script>
+    <!-- endbuild -->
+    <!-- Google Maps -->
+    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDADXlpX2alBz67rIO3mNGK_0tmghDrRLs&libraries=places"></script>
+  </body>
 
 </html>
