Update local mode
git-svn-id: svn://internal-repo/nsc/NHome/homeserver@140284 bc4cc02b-413e-4181-b44e-24092dc36e11

--- a/local/html/devices_template.html
+++ b/local/html/devices_template.html
@@ -16,6 +16,11 @@
             New Camera
           </a>
       </li>
+      <li role="presentation">
+        <a role="menuitem" tabindex="-1" href="" ng-click="device.scanForCameras()">
+          Scan cameras
+        </a>
+      </li>
     </ul>
   </div>
 </div>
