--- a/local/html/frame_template.html
+++ b/local/html/frame_template.html
@@ -237,6 +237,8 @@
       <add-remote></add-remote>
       <!-- add new camera -->
       <add-camera></add-camera>
+      <!-- scan camera -->
+      <add-scan-camera></add-scan-camera>
       <!-- edit device -->
       <edit-device></edit-device>
       <!-- bottom nav !-->
