--- a/local/index.html
+++ b/local/index.html
@@ -92,6 +92,7 @@
     <script defer src="js/directive/play-stream.js"></script>
     <script defer src="js/directive/add-remote.js"></script>
     <script defer src="js/directive/add-camera.js"></script>
+    <script defer src="js/directive/add-scanCamera.js"></script>
     <script defer src="js/directive/edit-device.js"></script>
     <script defer src="js/directive/add-scene.js"></script>
     <script defer src="js/directive/googleMaps.js"></script>
