Add new eynio branding
git-svn-id: svn://internal-repo/nsc/NHome/homeserver@142409 bc4cc02b-413e-4181-b44e-24092dc36e11

--- a/local/welcome/index.html
+++ b/local/welcome/index.html
@@ -39,7 +39,7 @@
                         Enjoy the full Click version
                     </p>
                 </a>
-                <a href="https://click.eynio.com/#/login?_k=47xm2p/demo/true" target="_blank" class="server-btn click">
+                <a href="https://click.eynio.com/#/login?_k=ptha6e/demo" target="_blank" class="server-btn click">
                     <button type="button" name="Start Click">
                             Try Click Demo
                         </button>
@@ -62,7 +62,7 @@
                         Enjoy the full Vision version
                     </p>
                 </a>
-                <a href="https://vision.eynio.com/#/login/demo/true" target="_blank" class="server-btn vision">
+                <a href="https://vision.eynio.com/#/login/demo" target="_blank" class="server-btn vision">
                     <button type="button" name="Try Vision Demo">Try Vision Demo</button>
                     <p>
                         Get the feel of the application
