Switch to Eynio Connect design
git-svn-id: svn://internal-repo/nsc/NHome/homeserver@144428 bc4cc02b-413e-4181-b44e-24092dc36e11

--- a/nwjs/index.html
+++ b/nwjs/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Eynio Server</title>
+  <title>Eynio Connect</title>
 </head>
 
 <body style="margin: 0">
